--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -36,8 +36,8 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     
     <link rel="stylesheet" href="libs/odometer/themes/odometer-theme-digital.css"/>
-    <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower/ngtoast/dist/ngToast.min.css">
+    <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/ngtoast/dist/ngToast.min.css">
     <link rel="stylesheet" href="libs/angular-chart.js/angular-chart.css" />
 
   </head>
@@ -74,8 +74,8 @@
     <script type="text/javascript" src="libs/angular-socket-io/socket.js"></script>
     <script type="text/javascript" src="libs/angular-local-storage/angular-local-storage.min.js"></script>
     <script type="text/javascript" src="libs/jquery/jquery.scrollbar.js"></script>
-    <script src="bower/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower/ngtoast/dist/ngToast.min.js"></script>
+    <script type="text/javascript" src="libs/angular-sanitize/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="libs/ngtoast/dist/ngToast.min.js"></script>
     
         <!--Odometer-->
     <script type="text/javascript" src="libs/odometer/odometer.js"></script>
