--- a/client/css/base-theme.css
+++ b/client/css/base-theme.css
@@ -9,6 +9,14 @@ body {
 	font-family: "DINCondensed_Bold";
 	margin-bottom: 0;
 }
+body{
+    background:#f6f6f6 url("../images/coffee-bar-bg.jpg") fixed center no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+    }
 html{
       height: 100%;
 }
@@ -515,9 +523,36 @@ iframe{
     padding: 7px 30px;
 	
 }
+
+	.btn-default {
+    color: #4e4e4e;
+    background-color: #fff;
+    border-color: #4e4e4e;
+}
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+    color: #4e4e4e;
+    background-color: #fff;
+    border-color: #4e4e4e;
+}
+
 .btn{
-	text-transform: uppercase;
-	}
+    font-family: "Raleway-SemiBold";
+    border-color: #4e4e4e;
+    font-size: 35px;
+    font-weight: 700;
+    text-transform:initial;
+    line-height: 1;
+    padding: 15px 35px;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    cursor:pointer;
+    border-radius: 4px;
+}
+
+
 /* Rrows
 ================================================== */
 .row-eq-height {
